fix(app): background - overflow and color
#53

--- a/src/app/normalize.scss
+++ b/src/app/normalize.scss
@@ -3,7 +3,7 @@ body,
 #root,
 .gc-app {
     position: relative;
-    min-height: 100%;
+    height: 100%;
 }
 
 // scrollbar
